--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "typeRoots": [
         "./src/types",
-        // "./node_modules/@types"
+        "./node_modules/@types"
       ],
     
   }
