--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-gesture-handler": "^2.23.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
