--- a/.env.template
+++ b/.env.template
@@ -4,5 +4,5 @@
 STAGE = dev
 
 API_URL = http://192.168.1.254:300/api
-API_URL_android= http://192.168.1.254:300/api
+API_URL_ANDROID = http://192.168.1.254:300/api
 API_URL_IOS = http://localhost:3000/api
