--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.11.1",
